1.10.0: Changes for release (#283)