@@ -1,4 +1,3 @@
-
 package gov.nih.nci.evs.api;
 
 import java.lang.reflect.InvocationHandler;
@@ -15,13 +14,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Automates JUnit proxy object creation.
- */
+/** Automates JUnit proxy object creation. */
 public class ProxyTester {
 
   /** The logger. */
@@ -44,7 +40,7 @@ public class ProxyTester {
 
   /**
    * Constructs a new tester for the specified class.
-   * 
+   *
    * @param obj Object to test.
    */
   public ProxyTester(final Object obj) {
@@ -52,11 +48,10 @@ public class ProxyTester {
   }
 
   /**
-   * Adds a field to the list of tested fields. If this method is called, the
-   * tester will not attempt to list all the getters and setters on the object
-   * under test, and will instead simply test all the fields in the include
-   * list.
-   * 
+   * Adds a field to the list of tested fields. If this method is called, the tester will not
+   * attempt to list all the getters and setters on the object under test, and will instead simply
+   * test all the fields in the include list.
+   *
    * @param field Field name whose getter/setter should be tested.
    */
   public void include(final String field) {
@@ -65,7 +60,7 @@ public class ProxyTester {
 
   /**
    * Adds a field to the list of excluded fields.
-   * 
+   *
    * @param field Field name to exclude from testing.
    */
   public void exclude(final String field) {
@@ -103,8 +98,8 @@ public class ProxyTester {
   }
 
   /**
-   * Walks through the methods in the class looking for getters and setters that
-   * are on our include list (if any) and are not on our exclude list.
+   * Walks through the methods in the class looking for getters and setters that are on our include
+   * list (if any) and are not on our exclude list.
    *
    * @param initializer a value that when used produces certain field values
    * @return the object
@@ -132,8 +127,9 @@ public class ProxyTester {
    * @param initializer the initializer
    * @throws Exception the exception
    */
-  protected void setFields(final Object o, final boolean reverseIncludes, final boolean logField,
-    final int initializer) throws Exception {
+  protected void setFields(
+      final Object o, final boolean reverseIncludes, final boolean logField, final int initializer)
+      throws Exception {
     final Set<String> fieldsSeen = new HashSet<>();
     final Method[] methods = clazz.getMethods();
     for (int i = 0; i < methods.length; i++) {
@@ -218,9 +214,7 @@ public class ProxyTester {
     }
   }
 
-  /**
-   * Dummy invocation handler for our proxy objects.
-   */
+  /** Dummy invocation handler for our proxy objects. */
   protected class DummyInvocationHandler implements InvocationHandler {
 
     /**
@@ -248,20 +242,29 @@ public class ProxyTester {
    * @param initializer the initializer
    * @throws Exception the exception
    */
-  protected void setField(final Object o, final String fieldName, final Method get,
-    final Method set, final Class<?> argType, final int initializer) throws Exception {
+  protected void setField(
+      final Object o,
+      final String fieldName,
+      final Method get,
+      final Method set,
+      final Class<?> argType,
+      final int initializer)
+      throws Exception {
     final Object proxy = makeProxy(fieldName, argType, initializer);
 
     // logger
     // .info(" " + set.getName() + " = " + proxy.toString());
     try {
-      set.invoke(o, new Object[] {
-          proxy
-      });
+      set.invoke(o, new Object[] {proxy});
     } catch (final InvocationTargetException e) {
       e.printStackTrace();
-      throw new RuntimeException("Setter " + set.getDeclaringClass().getName() + "." + set.getName()
-          + " threw " + e.getTargetException().toString());
+      throw new RuntimeException(
+          "Setter "
+              + set.getDeclaringClass().getName()
+              + "."
+              + set.getName()
+              + " threw "
+              + e.getTargetException().toString());
     } catch (final IllegalArgumentException e) {
       logger.debug("o=" + o.getClass().getName());
       logger.debug("proxy=" + proxy.getClass().getName());
@@ -270,10 +273,9 @@ public class ProxyTester {
   }
 
   /**
-   * Makes a proxy of a given class. If the class is an interface type, uses the
-   * standard JDK proxy mechanism. If it's not, uses cglib. The use of cglib is
-   * via reflection so that cglib is not required to use this library unless the
-   * caller actually needs to proxy a concrete class.
+   * Makes a proxy of a given class. If the class is an interface type, uses the standard JDK proxy
+   * mechanism. If it's not, uses cglib. The use of cglib is via reflection so that cglib is not
+   * required to use this library unless the caller actually needs to proxy a concrete class.
    *
    * @param fieldName the field name
    * @param type the type
@@ -281,11 +283,10 @@ public class ProxyTester {
    * @return a class of the specified type
    * @throws Exception the exception
    */
-  @SuppressWarnings({
-      "rawtypes", "deprecation"
-  })
+  @SuppressWarnings("rawtypes")
   protected Object makeProxy(final String fieldName, final Class<?> type, final int initializer)
-    throws Exception {
+      throws Exception {
+
     // Return field name proxies
     if (fieldProxyMap.containsKey(fieldName.toLowerCase())) {
       return fieldProxyMap.get(fieldName.toLowerCase()).get(initializer);
@@ -303,22 +304,22 @@ public class ProxyTester {
       return new Date(10L + initializer);
     }
     if (type == Boolean.class || type == boolean.class) {
-      return new Boolean((initializer & 1) == 0);
+      return Boolean.valueOf((initializer & 1) == 0);
     }
     if (type == Integer.class || type == int.class) {
-      return new Integer(initializer);
+      return Integer.valueOf(initializer);
     }
     if (type == Long.class || type == long.class) {
-      return new Long(initializer);
+      return Long.valueOf(initializer);
     }
     if (type == Double.class || type == double.class) {
-      return new Double((initializer * 1.0) / 100);
+      return Double.valueOf((initializer * 1.0) / 100);
     }
     if (type == Float.class || type == float.class) {
-      return new Float((initializer * 1.0) / 100);
+      return (float) ((initializer * 1.0) / 100);
     }
     if (type == Character.class || type == char.class) {
-      return new Character((char) ('a' + initializer));
+      return Character.valueOf((char) ('a' + initializer));
     }
     if (type == BigDecimal.class) {
       return new BigDecimal(initializer);
@@ -349,9 +350,8 @@ public class ProxyTester {
 
     /* Use JDK dynamic proxy if the argument is an interface. */
     if (type.isInterface()) {
-      return Proxy.newProxyInstance(type.getClassLoader(), new Class[] {
-          type
-      }, new DummyInvocationHandler());
+      return Proxy.newProxyInstance(
+          type.getClassLoader(), new Class[] {type}, new DummyInvocationHandler());
     }
 
     /* Get the CGLib classes we need. */
@@ -363,35 +363,36 @@ public class ProxyTester {
       callbackClass = Class.forName("net.sf.cglib.proxy.Callback");
       fixedValueClass = Class.forName("net.sf.cglib.proxy.FixedValue");
     } catch (final ClassNotFoundException e) {
-      throw new ClassNotFoundException("Need cglib to make a dummy " + type.getName()
-          + ". Make sure cglib.jar is on " + "your classpath.");
+      throw new ClassNotFoundException(
+          "Need cglib to make a dummy "
+              + type.getName()
+              + ". Make sure cglib.jar is on "
+              + "your classpath.");
     }
 
     /* Make a dummy callback (proxies within proxies!) */
     Object callback;
-    callback = Proxy.newProxyInstance(callbackClass.getClassLoader(), new Class[] {
-        fixedValueClass
-    }, new DummyInvocationHandler());
+    callback =
+        Proxy.newProxyInstance(
+            callbackClass.getClassLoader(),
+            new Class[] {fixedValueClass},
+            new DummyInvocationHandler());
 
-    final Method createMethod = enhancerClass.getMethod("create", new Class[] {
-        Class.class, callbackClass
-    });
-    return createMethod.invoke(null, new Object[] {
-        type, callback
-    });
+    final Method createMethod =
+        enhancerClass.getMethod("create", new Class[] {Class.class, callbackClass});
+    return createMethod.invoke(null, new Object[] {type, callback});
   }
 
   /**
    * Returns an instance of an enum.
-   * 
-   * JAVA5 - Comment out or remove this method on older Java versions.
+   *
+   * <p>JAVA5 - Comment out or remove this method on older Java versions.
    *
    * @param clazz1 the class
    * @param initializer the initializer
    * @return an instance of an enum
    * @throws Exception the exception
    */
-  @SuppressWarnings("static-method")
   private Object makeEnum(final Class<?> clazz1, final int initializer) throws Exception {
     final Method m = clazz1.getMethod("values", new Class[0]);
     final Object[] o = (Object[]) m.invoke(null, new Object[0]);
